tests/fsharp/typecheck/sigs/neg_byref_22.bsl

neg_byref_22.fs(3,16,3,20): typecheck error FS0001: This expression was expected to have type
    'byref<int>'    
but here has type
    'int'    

neg_byref_22.fs(3,16,3,20): typecheck error FS0001: This expression was expected to have type
    'byref<int>'    
but here has type
    'int'    

neg_byref_22.fs(5,16,5,17): typecheck error FS0001: This expression was expected to have type
    'float'    
but here has type
    'int'    
